Fix overflow for cost types date picker

--- a/frontend/src/global_styles/content/_table.sass
+++ b/frontend/src/global_styles/content/_table.sass
@@ -63,7 +63,9 @@ $toolbar-height--mobile: 100px
     padding-bottom: var(--generic-table--footer-height)
 
   &_visible-overflow
-    overflow: visible
+    &,
+    .generic-table--results-container
+      overflow: visible
 
 .generic-table--results-container
   height:       100%
